--- a/DesignPatterns.csproj
+++ b/DesignPatterns.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="7.Composite\" />
+  </ItemGroup>
+
 </Project>
